--- a/Obligatorisk2.html
+++ b/Obligatorisk2.html
@@ -15,7 +15,7 @@
     <div id="qunit"></div>
     <div id="qunit-fixture"></div>
     <script src="https://code.jquery.com/qunit/qunit-2.10.0.js"></script>
-    <script src="C:\Users\karte\Documents\GitHub\Oblig 2\Javascript\Test.js"></script>
+    <script src="Javascript\Test.js"></script>
     <script src="Javascript\Script.js"></script>
 <script>
 //View
